@@ -58,7 +58,12 @@ sqlrcontroller_svr::sqlrcontroller_svr() : listener() {
 	serversockincount=0;
 
 	inetport=0;
-	authc=NULL;
+
+	users=NULL;
+	passwords=NULL;
+	passwordencryptions=NULL;
+	usercount=0;
+
 	lastuserbuffer[0]='\0';
 	lastpasswordbuffer[0]='\0';
 	lastauthsuccess=false;
@@ -100,6 +105,7 @@ sqlrcontroller_svr::sqlrcontroller_svr() : listener() {
 	sqlrlg=NULL;
 	sqlrq=NULL;
 	sqlrpe=NULL;
+	sqlra=NULL;
 
 	decrypteddbpassword=NULL;
 
@@ -145,7 +151,14 @@ sqlrcontroller_svr::~sqlrcontroller_svr() {
 
 	delete tmpdir;
 
-	delete authc;
+	for (uint32_t i=0; i<usercount; i++) {
+		delete[] users[i];
+		delete[] passwords[i];
+		delete[] passwordencryptions[i];
+	}
+	delete[] users;
+	delete[] passwords;
+	delete[] passwordencryptions;
 
 	delete idmemory;
 
@@ -167,6 +180,7 @@ sqlrcontroller_svr::~sqlrcontroller_svr() {
 	delete sqlrlg;
 	delete sqlrq;
 	delete sqlrpe;
+	delete sqlra;
 
 	delete[] decrypteddbpassword;
 
@@ -224,8 +238,13 @@ bool sqlrcontroller_svr::init(int argc, const char **argv) {
 		sqlrpe->loadPasswordEncryptions(pwdencs);
 	}	
 
-	// load the authenticator
-	authc=new sqlrauthenticator(cfgfl,sqlrpe);
+	// initialize authentication
+	initLocalAuthentication();
+	const char	*auths=cfgfl->getAuthentications();
+	if (auths && auths[0]) {
+		sqlra=new sqlrauths;
+		sqlra->loadAuthenticators(auths,sqlrpe);
+	}
 
 	setUserAndGroup();
 
@@ -1647,7 +1666,9 @@ bool sqlrcontroller_svr::connectionBasedAuth(const char *userbuffer,
 						const char *passwordbuffer) {
 
 	// handle connection-based authentication
-	bool	retval=authc->authenticate(userbuffer,passwordbuffer);
+	bool	retval=
+		(authenticateLocal(userbuffer,passwordbuffer) ||
+		(sqlra && sqlra->authenticate(userbuffer,passwordbuffer)));
 	if (retval) {
 		logDebugMessage("auth succeeded on connection");
 	} else {
@@ -1655,6 +1676,102 @@ bool sqlrcontroller_svr::connectionBasedAuth(const char *userbuffer,
 						"invalid user/password");
 	}
 	return retval;
+}
+
+void sqlrcontroller_svr::initLocalAuthentication() {
+
+	// get the list of users from the config file
+	linkedlist< usercontainer * >	*userlist=cfgfl->getUserList();
+	usercount=userlist->getLength();
+
+	// create an array of users and passwords and store the
+	// users and passwords from the config file in them
+	users=new char *[usercount];
+	passwords=new char *[usercount];
+	passwordencryptions=new char *[usercount];
+
+	usernode	*current=userlist->getFirstNode();
+	for (uint32_t i=0; i<usercount; i++) {
+		users[i]=charstring::duplicate(
+				current->getValue()->getUser());
+		passwords[i]=charstring::duplicate(
+				current->getValue()->getPassword());
+		passwordencryptions[i]=charstring::duplicate(
+				current->getValue()->getPasswordEncryption());
+		current=current->getNext();
+	}
+}
+
+bool sqlrcontroller_svr::authenticateLocal(const char *user,
+						const char *password) {
+
+	// run through the user/password arrays...
+	for (uint32_t i=0; i<usercount; i++) {
+
+		// if the user matches...
+		if (!charstring::compare(user,users[i])) {
+
+			if (sqlrpe &&
+				charstring::length(passwordencryptions[i])) {
+
+				// if password encryption is being used...
+
+				// get the module
+				sqlrpwdenc	*pe=
+					sqlrpe->getPasswordEncryptionById(
+							passwordencryptions[i]);
+				if (!pe) {
+					return false;
+				}
+
+				// For one-way encryption, encrypt the password
+				// that was passed in and compare it to the
+				// encrypted password in the config file.
+				// For two-way encryption, decrypt the password
+				// from the config file and compare ot to the
+				// password that was passed in...
+
+				bool	retval=false;
+				char	*pwd=NULL;
+				if (pe->oneWay()) {
+
+					// encrypt the password
+					// that was passed in
+					pwd=pe->encrypt(password);
+
+					// compare it to the encrypted
+					// password from the config file
+					retval=!charstring::compare(
+							pwd,passwords[i]);
+
+				} else {
+
+					// decrypt the password
+					// from the config file
+					pwd=pe->decrypt(passwords[i]);
+
+					// compare it to the password
+					// that was passed in
+					retval=!charstring::compare(
+							password,pwd);
+				}
+
+				// clean up
+				delete[] pwd;
+
+				// return true/false
+				return retval;
+
+			} else {
+
+				// if password encryption isn't being used,
+				// return true if the passwords match
+				return !charstring::compare(password,
+								passwords[i]);
+			}
+		}
+	}
+	return false;
 }
 
 bool sqlrcontroller_svr::databaseBasedAuth(const char *userbuffer,
