@@ -9,6 +9,7 @@
 	updated pthread test to match rudiments pthread test
 	moved everything done by children of sqlwriter interface into
 		individual translations
+	added plugin-based authentication framework
 
 0.55 - fixed a sql translation bug related to exists clauses
 	added deployment projects for windows
